
There are also some major changes on configuration file,

*  "server.parent" option now use URI format instead of IP:PORT.
   This will allow parent name servers to be UDP, TCP, and/or DoH
   simultaneously.

*  "server.doh.parent" and "server.parent.connection" are removed,
   redundant with new "server.parent" format.

*  "cache.threshold" is renamed to "cache.prune_threshold".


=  Rescached v2.1.2 (2019-03-22)

==  Bug Fix

Use single Go routine to handle request.  This fix mismatched ID in
response due to single response is being use by multiple routines.


=  Rescached v2.1.1 (2019-03-02)

==  Enhancements

*  Run multiple (4) go routines to handle request
*  Make the debug output to be more human readable

==  Bug Fixes

*  cmd/resolver: fix query with zero ID


=  Rescached v2.1.0 (2019-02-01)

==  New Features

-  Change default parent nameservers to Cloudflare DNS.
We believe in Cloudflare!
Please read Cloudflare DNS policy for more information,

	https://developers.cloudflare.com/1.1.1.1/commitment-to-privacy/privacy-policy/privacy-policy/

==  Enhancements

-  Improve response performance.  Previously we can serve around 93k request
per second (RPS).  The new enhancement increase the RPS to around 115k.

==  Bug Fixes

-  Fix the example certificate and key for DNS over HTTPS
-  Fix the hosts.block destination file in script to update blocked host file
-  Fix response with different query type that may not get pruned


=  Rescached v2.0.0 (2019-01-16)

==  Features

-  Enable to handle request from UDP and TCP connections
-  Enable to forward request using UDP or TCP connection
-  Load and serve addresses and hostnames in `/etc/hosts`
-  Load and serve hosts formated files inside directory
   `/etc/rescached/hosts.d/`
-  Blocking ads and/or malicious websites through host list in
   `/etc/rescached/hosts.d/hosts.block`
-  Support loading and serving master (zone) file format from
   `/etc/rescached/master.d`
-  Integration with openresolv