@@ -114,15 +114,6 @@ server.listen=127.0.0.1:53
 #dir.master=/etc/rescached/master.d
 
 ##
-## file.pid:: A path to PID file.
-##
-## Format:: /any/path/to/file
-## Default:: rescached.pid
-##
-
-file.pid=/var/run/rescached.pid
-
-##
 ## file.resolvconf:: A path to dynamically generated resolv.conf (5) by
 ## resolvconf (8).  If set, the nameserver values in referenced file will be
 ## used as fallback nameserver.
