@@ -166,17 +166,6 @@ If set, rescached will load all master files inside directory.
 If its empty or unset, it will not loading master file even in default
 location.
 
-[[file.pid]]
-==== +file.pid+
-
-Format:: /any/path/to/file
-Default:: rescached.pid (in current directory)
-Description:: When +rescached+ started, it will create this file as a mediator
-to any system service.
-Content of this file is the process ID (PID) of +rescached+ in system.
-If not set then the default name will be used, and it will be saved in current
-directory where user running +rescached+.
-
 [[file.resolvconf]]
 ==== +file.resolvconf+
 
