@@ -1,15 +1,6 @@
 [RESCACHED]
 
 ##
-## file.pid:: A path to PID file.
-##
-## Format:: /any/path/to/file
-## Default:: rescached.pid
-##
-
-file.pid=./testdata/rescached.pid
-
-##
 ## server.parent:: List of parent DNS servers, separated by commas.
 ##
 ## Format:: <IP-ADDRESS:PORT> , ...
